[package]
name = "mvfs"
version = "0.3.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Heyang Zhou <heyang.zhou@icloud.com>"]
description = "mvfs"
repository = "https://github.com/losfair/mvsqlite"

[lib]
crate-type = ["rlib", "staticlib"]

[dependencies]
anyhow = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
mvclient = { path = "../mvclient", version = "0.3.0" }
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lazy_static = "1.5.0"
reqwest = { version = "0.11.27", default-features = false } # the dependent crate should set its own features
moka = { version = "0.9.9" }
bytes = "1.9.0"
